[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svl"
version = "1.7.0"
authors = [
    { name = "Ambiq Micro" },
]
license = { file="LICENSE" }
description = "The SparkFun Variable Loader (SVL) and Ambiq Secure Bootloader (ASB) used on SparkFun Apollo3 and Artemis boards"
readme = "README.md"
dependencies = ["pyserial", "pycryptodome"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"SVL Upstream" = "https://github.com/sparkfun/Apollo3_Uploader_SVL"
"ASB Upstream" = "https://github.com/sparkfun/Apollo3_Uploader_ASB"

[project.scripts]
svl = "svl:main"
asb = "asb:main"
